# rl4fisheries

./: .dvcignore  .gitignore  README.md  calkit.yaml  dvc.yaml  pyproject.toml
.calkit/env-locks/: for-results.txt
.dvc/: config
hyperpars/: RL-template.yml  ppo-asm-esc.yml  ppo-asm-v0-1.yml  ppo-asm.yml  ppo-asm2o-v0-1.yml  ppo-asm_esc-v0-1.yml  rppo-asm.yml  rppo-asm2o.yml  tqc-asm.yml  tqc-asm2o-v0-1.yml
hyperpars/for_results/: fixed_policy_UM1.yml  fixed_policy_UM2.yml  fixed_policy_UM3.yml  ppo_biomass_UM1.yml  ppo_biomass_UM2.yml  ppo_biomass_UM3.yml  ppo_both_UM1.yml  ppo_both_UM2.yml  ppo_both_UM3.yml  ppo_both_UM3_deep.yml  ppo_mwt_UM1.yml  ppo_mwt_UM2.yml  ppo_mwt_UM3.yml
hyperpars/frame_stacking/: ppo_biomass_UM1.yml  ppo_both_UM1.yml  ppo_both_UM2.yml  ppo_both_UM3.yml
hyperpars/lstm/: mt-car-small-lstm.yml  mt-car-us-hybrid.yml  mt-car.yml
hyperpars/noisy_obs/: chonk.yml  chonk2.yml  chonk3.yml  fixed_policy_UM1.yml  ppo_biomass_UM1.yml  ppo_biomass_UM1_deep.yml  ppo_biomass_UM2.yml  ppo_biomass_UM2_deep.yml  ppo_biomass_UM3.yml  ppo_biomass_UM3_deep.yml  ppo_both_UM1.yml  ppo_both_UM1_deep.yml  ppo_both_UM2.yml  ppo_both_UM2_deep.yml  ppo_both_UM3.yml  ppo_both_UM3_deep.yml
hyperpars/old_for_res/: ppo_both_UM1.yml  ppo_mwt_UM1.yml  (+1 more)
notebooks/: SystemDynamics.ipynb  compare-solutions.ipynb  example.ipynb  explore-optima.ipynb  optimal-fixed-policy-cases-results.ipynb  optimal-fixed-policy.ipynb  popdyn_tests.ipynb  result_plots.ipynb
scripts/: benchmark_noise.py  benchmark_noise.sh  fixed_policy_opt.py  train.py  train_rl_algos.sh  tune.py  tune_fixed_policies.sh
tests/: test_agents.py  test_asm.py
(+50 files in other folders)
