[project]
name = "rl4fisheries"
version = "1.0.0"

dependencies = ["gymnasium",
                "numpy",
                "matplotlib",
                "typing",
                "polars",
                "tqdm"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "stable_baselines3",  "sb3-contrib", "ray"]
docs = ["ibis-framework", "stable_baselines3", "sb3-contrib", "plotnine", "huggingface_hub"]
